--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha"
+    "test": "mocha -R xunit > test/xunit.xml"
   },
   "author": "Arthur Proestakis",
   "license": "ISC",
